--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ imageio
 scipy
 six
 numpy
+torch
+Pillow==6.1
 python-dateutil==2.7.3
 tensorboard==1.12.2
 tensorboardX==1.6
-tensorflow-gpu==1.12.0
+tensorflow-gpu==1.14.0
 tqdm==4.29.1
